--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -932,98 +932,61 @@
     }
 
     // Função para carregar as apostas
-    function carregarApostas() {
-      if (!currentUser) {
-        console.error("Nenhum usuário logado ao tentar carregar apostas");
-        return;
-      }
+    async function carregarApostas() {
+      if (!currentUser) return;
 
-      const apostasLista = document.getElementById("apostas-lista");
-      apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
+      try {
+        // Configurar listener em tempo real para apostas
+        const apostasRef = collection(db, "apostas");
+        const q = query(
+          apostasRef,
+          where("userEmail", "==", currentUser),
+          orderBy("timestamp", "desc")
+        );
 
-      // Filtrar apostas apenas do usuário atual
-      const apostasRef = query(
-        collection(db, "apostas"),
-        where("userEmail", "==", currentUser),
-        orderBy("timestamp", "desc")
-      );
-
-      onSnapshot(apostasRef, (snapshot) => {
-        let ganhoTotal = 0;
-        let perdaTotal = 0;
-        let todasApostas = [];
-
-        if (snapshot.empty) {
-          apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
-          document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
-
-          // Zerar totais quando não há apostas
-          document.getElementById("ganho-total").textContent = formatarMoeda(0);
-          document.getElementById("perda-total").textContent = formatarMoeda(0);
-          document.getElementById("saldo-total").textContent = formatarMoeda(0);
-          return;
+        // Remover listener anterior se existir
+        if (window.unsubscribeApostas) {
+          window.unsubscribeApostas();
         }
 
-        apostasLista.innerHTML = "";
+        // Configurar novo listener
+        window.unsubscribeApostas = onSnapshot(q, (querySnapshot) => {
+          const apostas = [];
+          querySnapshot.forEach((doc) => {
+            apostas.push({ id: doc.id, ...doc.data() });
+          });
 
-        snapshot.forEach((doc) => {
-          const aposta = doc.data();
-          todasApostas.push({ ...aposta, id: doc.id });
+          // Atualizar lista de apostas
+          const apostasLista = document.getElementById("apostas-lista");
+          apostasLista.innerHTML = apostas.length === 0
+            ? '<div class="history-empty">Nenhuma aposta registrada</div>'
+            : apostas.map(aposta => `
+                <div class="bet-item">
+                  <div class="bet-header">
+                    <span class="bet-date">${new Date(aposta.timestamp.toDate()).toLocaleString()}</span>
+                    <button class="remove-button" onclick="removerAposta('${aposta.id}')">
+                      <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="3 6 5 6 21 6"></polyline>
+                        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                        <line x1="10" y1="11" x2="10" y2="17"></line>
+                        <line x1="14" y1="11" x2="14" y2="17"></line>
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="bet-details">
+                    <span class="bet-market">${aposta.mercado}</span>
+                    <span class="bet-value">${formatarMoeda(aposta.valor)}</span>
+                  </div>
+                  <div class="bet-result ${aposta.resultado}">${aposta.resultado.toUpperCase()}</div>
+                </div>
+              `).join("");
 
-          const apostaItem = document.createElement("div");
-          apostaItem.classList.add("aposta-item");
-
-          const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
-          const odds = parseFloat(aposta.odds.toString().replace(",", "."));
-          let valorFinal = 0;
-
-          switch (aposta.resultado) {
-            case "green":
-              valorFinal = stake * (odds - 1);
-              ganhoTotal += valorFinal;
-              break;
-            case "red":
-              valorFinal = -stake;
-              perdaTotal += stake;
-              break;
-            case "meio-green":
-              valorFinal = (stake / 2) * (odds - 1);
-              ganhoTotal += valorFinal;
-              break;
-            case "meio-red":
-              valorFinal = -stake / 2;
-              perdaTotal += stake / 2;
-              break;
-          }
-
-          const statusClass = getStatusClass(aposta.resultado);
-          const statusText = getStatusText(aposta.resultado);
-          const valorFinalText = valorFinal === 0 ? "" : ` (${formatarMoeda(valorFinal)})`;
-          const dataFormatada = aposta.timestamp?.toDate().toLocaleString('pt-BR') || '';
-
-          apostaItem.innerHTML = `
-        <div class="aposta-info">
-          <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
-          ${aposta.jogador1} vs ${aposta.jogador2}<br>
-          <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
-          <small>${dataFormatada}</small>
-        </div>
-        <div class="aposta-actions">
-          <button onclick="removerAposta('${doc.id}')">Remover</button>
-        </div>
-      `;
-
-          apostasLista.appendChild(apostaItem);
+          // Atualizar gráfico
+          atualizarGrafico(apostas);
         });
-
-        // Atualizar resumo
-        document.getElementById("ganho-total").textContent = formatarMoeda(ganhoTotal);
-        document.getElementById("perda-total").textContent = formatarMoeda(perdaTotal);
-        document.getElementById("saldo-total").textContent = formatarMoeda(ganhoTotal - perdaTotal);
-
-        // Criar gráfico
-        criarGrafico(todasApostas);
-      });
+      } catch (error) {
+        console.error("Erro ao carregar apostas:", error);
+      }
     }
 
     function getStatusText(resultado) {
