--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -347,129 +347,11 @@
       content: "←";
       font-weight: bold;
     }
-
-    /* Tela de carregamento */
-    .loading-screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(10, 10, 13, 0.9);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      color: #a78bfa;
-      font-size: 1.5rem;
-    }
-
-    /* Tela de erro de autenticação */
-    .auth-error {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(to bottom, #0a0a0d, #101022);
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    .auth-error h2 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      color: #a78bfa;
-    }
-
-    .auth-error button {
-      margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #8b5cf6;
-      color: white;
-      border: none;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .auth-error button:hover {
-      background-color: #7c3aed;
-    }
-
-    /* Estilo para apostas */
-    .aposta-item {
-      background-color: rgba(31, 41, 55, 0.7);
-      border: 1px solid #374151;
-      border-radius: 0.5rem;
-      padding: 0.75rem 1rem;
-      margin-bottom: 0.5rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-
-    .aposta-actions button {
-      background: none;
-      border: none;
-      color: #ef4444;
-      cursor: pointer;
-      transition: color 0.2s;
-    }
-
-    .aposta-actions button:hover {
-      color: #f87171;
-    }
-
-    .history-title {
-      font-size: 1.125rem;
-      font-weight: 500;
-      color: #a78bfa;
-      margin-bottom: 0.75rem;
-    }
-
-    .chart-container {
-      background-color: rgba(31, 41, 55, 0.5);
-      border-radius: 0.5rem;
-      padding: 1rem;
-      margin-bottom: 1.5rem;
-      height: 200px;
-    }
-
-    .chart-title {
-      font-size: 1rem;
-      font-weight: 500;
-      color: #a78bfa;
-      margin-bottom: 0.5rem;
-    }
-
-    .loading {
-      text-align: center;
-      padding: 1rem;
-      color: #9ca3af;
-    }
   </style>
 </head>
 
 <body>
-  <!-- Modificar a div de autenticação -->
-  <div id="auth-screen" style="display: none;" class="auth-error">
-    <h2>Autenticação Necessária</h2>
-    <div class="form-group">
-      <input type="email" id="auth-email" placeholder="Seu e-mail" class="form-input">
-      <input type="password" id="auth-password" placeholder="Sua senha" class="form-input">
-    </div>
-    <button id="auth-button">
-      <span id="auth-text">Entrar</span>
-      <div id="auth-loader" style="display: none;">Carregando...</div>
-    </button>
-    <div id="auth-error" style="color: #ef4444; margin-top: 10px;"></div>
-  </div>
-
-  <!-- Botão voltar sem o redirecionamento automático -->
-  <button class="back-button" id="back-button"></button>
-
+  <button class="back-button" onclick="window.location.href='visualization.html'"></button>
   <div class="container">
     <div class="app-container">
       <!-- Cabeçalho -->
@@ -629,7 +511,6 @@
   <!-- Seu script atual aqui -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
     import {
       getFirestore,
       collection,
@@ -657,7 +538,6 @@
     };
 
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
     const db = getFirestore(app);
 
     // Variáveis globais
@@ -699,31 +579,6 @@
       });
     }
 
-    // Função para calcular o valor da aposta
-    function calcularValorAposta(stake, odds, resultado) {
-      let valor = 0;
-
-      switch (resultado) {
-        case "green":
-          valor = stake * (odds - 1);
-          break;
-        case "red":
-          valor = -stake;
-          break;
-        case "meio-green":
-          valor = (stake / 2) * (odds - 1);
-          break;
-        case "meio-red":
-          valor = -stake / 2;
-          break;
-        case "reembolso":
-          valor = 0;
-          break;
-      }
-
-      return valor;
-    }
-
     // Funções de navegação
     function setupTabs() {
       const tabButtons = document.querySelectorAll(".tab-button");
@@ -739,102 +594,39 @@
           button.classList.add("active");
           const tabId = button.dataset.tab;
           document.getElementById(`${tabId}-tab`).classList.add("active");
-
-          // Carregar dados quando a aba de histórico for selecionada
-          if (tabId === 'history') {
-            carregarApostas();
-          }
         });
       });
     }
 
     // Funções de autenticação
-    async function checkUserLogin() {
-      try {
-        // Verificar se o usuário está logado no Firebase Auth
-        const user = auth.currentUser;
+    function checkUserLogin() {
+      currentUser = localStorage.getItem('currentUser');
+      currentUserKey = localStorage.getItem('currentUserKey');
 
-        if (!user) {
-          // Se não estiver logado, verificar sessionStorage
-          if (sessionStorage.getItem('loggedIn') !== 'true') {
-            showAuthScreen();
-            return false;
-          } else {
-            // Recuperar dados do localStorage se tiver sessão válida
-            currentUser = localStorage.getItem('currentUser');
-            if (!currentUser) {
-              showAuthScreen();
-              return false;
-            }
-          }
-        } else {
-          // Se o usuário estiver logado via Firebase Auth
-          currentUser = user.email;
-          localStorage.setItem('currentUser', currentUser);
-        }
-
-        // Se chegou aqui, o usuário está autenticado
-        hideAuthScreen();
-        document.querySelector('.container').style.display = 'block';
-
-        // Atualizar interface com dados do usuário
-        document.getElementById('user-email').textContent = currentUser;
-        document.getElementById('user-avatar').textContent = currentUser.charAt(0).toUpperCase();
-
-        return true;
-      } catch (error) {
-        console.error("Erro na verificação de login:", error);
-        showAuthScreen();
+      if (!currentUser || !currentUserKey) {
+        window.location.replace('index.html');
         return false;
       }
-    }
 
-    function showAuthScreen() {
-      document.getElementById('auth-screen').style.display = 'flex';
-      document.querySelector('.container').style.display = 'none';
-    }
+      // Atualizar interface do usuário
+      document.getElementById('user-email').textContent = currentUser;
+      document.getElementById('user-avatar').textContent = currentUser.charAt(0).toUpperCase();
 
-    function hideAuthScreen() {
-      document.getElementById('auth-screen').style.display = 'none';
-      document.querySelector('.container').style.display = 'block';
-    }
-
-    function showError(message) {
-      const errorElement = document.getElementById('auth-error');
-      errorElement.textContent = message;
-      errorElement.style.display = 'block';
-    }
-
-    async function handleAuth(email, password) {
-      const authText = document.getElementById('auth-text');
-      const authLoader = document.getElementById('auth-loader');
-      const authButton = document.getElementById('auth-button');
-
-      try {
-        // Mostrar loader
-        authText.style.display = 'none';
-        authLoader.style.display = 'block';
-        authButton.disabled = true;
-
-        // Tentar login
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-
-        // Salvar estado de login
-        sessionStorage.setItem('loggedIn', 'true');
-        localStorage.setItem('currentUser', user.email);
-
-        // Recarregar a página
-        location.reload();
-      } catch (error) {
-        console.error("Erro na autenticação:", error);
-        showError('E-mail ou senha inválidos');
-
-        // Restaurar botão
-        authText.style.display = 'block';
-        authLoader.style.display = 'none';
-        authButton.disabled = false;
+      // Verificar se é admin ou dono dos mercados para mostrar/ocultar o formulário de adicionar mercados
+      const marketForm = document.getElementById("market-form");
+      if (marketForm) {
+        const mercadosRef = collection(db, "mercados");
+        const q = query(mercadosRef, where("userEmail", "==", currentUser), limit(1));
+        getDocs(q).then((snapshot) => {
+          if (!snapshot.empty || currentUserKey === 'admin') {
+            marketForm.style.display = "flex";
+          } else {
+            marketForm.style.display = "none";
+          }
+        });
       }
+
+      return true;
     }
 
     // Funções de mercados
@@ -842,17 +634,19 @@
       if (!currentUser) return;
 
       const mercadosRef = collection(db, "mercados");
-      try {
-        // Buscar todos os mercados, ordenados por nome
-        const q = query(mercadosRef, orderBy("nome"));
-        const querySnapshot = await getDocs(q);
+      const q = query(mercadosRef, where("userEmail", "==", currentUser));
 
+      try {
+        const querySnapshot = await getDocs(q);
         const mercados = [];
         querySnapshot.forEach((doc) => {
           mercados.push({ id: doc.id, ...doc.data() });
         });
 
-        // Atualizar select de mercados (todos os mercados disponíveis)
+        // Ordenar mercados alfabeticamente
+        mercados.sort((a, b) => a.nome.localeCompare(b.nome));
+
+        // Atualizar select de mercados
         const selectMercado = document.getElementById("mercado");
         selectMercado.innerHTML = "";
         mercados.forEach((mercado) => {
@@ -862,28 +656,21 @@
           selectMercado.appendChild(option);
         });
 
-        // Filtrar apenas os mercados do usuário atual para a lista de gerenciamento
-        const mercadosDoUsuario = mercados.filter(mercado =>
-          mercado.userEmail === currentUser || mercado.userEmail === "admin@rwtips.com"
-        );
-
-        // Atualizar lista de mercados (apenas os do usuário e admin)
+        // Atualizar lista de mercados
         const mercadosLista = document.getElementById("mercados-lista");
-        mercadosLista.innerHTML = mercadosDoUsuario.length === 0
+        mercadosLista.innerHTML = mercados.length === 0
           ? '<div class="history-empty">Nenhum mercado cadastrado</div>'
-          : mercadosDoUsuario.map(mercado => `
+          : mercados.map(mercado => `
               <div class="market-item">
                 <span>${mercado.nome}</span>
-                ${mercado.userEmail === currentUser ? `
-                  <button class="remove-button" data-id="${mercado.id}">
-                    <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <polyline points="3 6 5 6 21 6"></polyline>
-                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                      <line x1="10" y1="11" x2="10" y2="17"></line>
-                      <line x1="14" y1="11" x2="14" y2="17"></line>
-                    </svg>
-                  </button>
-                ` : ''}
+                <button class="remove-button" data-id="${mercado.id}">
+                  <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="3 6 5 6 21 6"></polyline>
+                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                    <line x1="10" y1="11" x2="10" y2="17"></line>
+                    <line x1="14" y1="11" x2="14" y2="17"></line>
+                  </svg>
+                </button>
               </div>
             `).join("");
 
@@ -931,7 +718,7 @@
       }
     }
 
-    // Função para carregar as apostas
+    // Função para carregar as apostas (ajustada para mostrar todas)
     function carregarApostas() {
       const apostasLista = document.getElementById("apostas-lista");
       apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
@@ -1014,6 +801,16 @@
       });
     }
 
+    function getStatusText(resultado) {
+      const statusMap = {
+        'green': 'Green',
+        'red': 'Red',
+        'meio-green': '½ Green',
+        'meio-red': '½ Red',
+        'reembolso': 'Reembolso'
+      };
+      return statusMap[resultado] || resultado;
+    }
 
     function getStatusClass(resultado) {
       const statusMap = {
@@ -1149,8 +946,6 @@
       });
     }
 
-
-
     // Função para mapear liga da API para o select
     function mapearLiga(ligaNome) {
       // Primeiro verificar H2H para não conflitar com Battle 8 min normal
@@ -1238,52 +1033,27 @@
       jogador2.setAttribute("list", "jogadores-lista");
     }
 
+    
     // Event Listeners
     document.addEventListener("DOMContentLoaded", async () => {
-      // Inicialmente ocultar o container principal
-      document.querySelector('.container').style.display = 'none';
+      // Verificar se os dados do usuário existem no localStorage
+      currentUser = localStorage.getItem('currentUser');
+      currentUserKey = localStorage.getItem('currentUserKey');
 
-      // Verificar autenticação
-      if (!await checkUserLogin()) {
-        // Adicionar evento para o botão de autenticação
-        document.getElementById('auth-button').addEventListener('click', async () => {
-          const email = document.getElementById('auth-email').value.trim();
-          const password = document.getElementById('auth-password').value;
-
-          if (!email || !password) {
-            showError('Por favor, preencha todos os campos');
-            return;
-          }
-
-          await handleAuth(email, password);
-        });
+      if (!currentUser || !currentUserKey) {
+        window.location.replace('index.html');
         return;
       }
 
-      // Configurar o botão de voltar
-      document.getElementById('back-button').addEventListener('click', () => {
-        window.location.href = 'visualization.html';
-      });
+      // Atualizar interface do usuário
+      document.getElementById('user-email').textContent = currentUser;
+      document.getElementById('user-avatar').textContent = currentUser.charAt(0).toUpperCase();
 
       // Inicializar a página
       setupTabs();
-
-      // Essas funções precisam ser executadas APÓS a confirmação de login
       await carregarMercados();
-      await carregarApostas();  // Esta função carrega o gráfico e os dados salvos
+      await carregarApostas();
       await buscarDadosAPI();
-
-      // Adicionar listener para atualização automática
-      onSnapshot(query(
-        collection(db, "apostas"),
-        where("userEmail", "==", currentUser),
-        orderBy("timestamp", "desc")
-      ), (snapshot) => {
-        carregarApostas();
-      });
-
-      // Resto do código permanece o mesmo...
-
 
       // Adicionar evento para atualizar jogadores quando mudar a liga
       document.getElementById("liga").addEventListener("change", () => {
@@ -1353,7 +1123,7 @@
         }
       });
 
-      // // Cálculo dinâmico do resultado
+      // Cálculo dinâmico do resultado
       ["stake", "odds", "resultado"].forEach(id => {
         document.getElementById(id).addEventListener("input", () => {
           const stake = parseFloat(document.getElementById("stake").value) || 0;
