--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -150,6 +150,17 @@
       box-shadow: 0 0 0 2px rgba(139, 92, 246, 0.2);
     }
 
+    /* Adicionar estilos para o datalist */
+    input[list] {
+      background-color: #1f2937;
+      color: white;
+    }
+
+    /* Melhorar a aparência dos inputs */
+    input::placeholder {
+      color: #9ca3af;
+    }
+
     /* Botões */
     .submit-button {
       width: 100%;
@@ -417,13 +428,15 @@
 
           <div class="form-group">
             <label for="jogador1">Jogador 1</label>
-            <input type="text" id="jogador1" placeholder="Nome do Jogador 1" required>
+            <input type="text" id="jogador1" placeholder="Nome do Jogador 1" list="jogadores-lista" required>
           </div>
 
           <div class="form-group">
             <label for="jogador2">Jogador 2</label>
-            <input type="text" id="jogador2" placeholder="Nome do Jogador 2" required>
+            <input type="text" id="jogador2" placeholder="Nome do Jogador 2" list="jogadores-lista" required>
           </div>
+
+          <datalist id="jogadores-lista"></datalist>
 
           <div class="form-group">
             <label for="mercado">Mercado</label>
@@ -982,8 +995,13 @@
       try {
         const response = await fetch('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1');
         const data = await response.json();
-        jogadoresCache[currentUser] = data;
-        return data;
+        const jogadores = new Set();
+        data.forEach(evento => {
+          jogadores.add(extrairNomeJogador(evento.player1));
+          jogadores.add(extrairNomeJogador(evento.player2));
+        });
+        jogadoresCache[currentUser] = jogadores;
+        return jogadores;
       } catch (error) {
         console.error("Erro ao buscar dados da API:", error);
       }
@@ -991,32 +1009,15 @@
 
     // Função para atualizar datalists dos jogadores
     function atualizarDatalistsJogadores() {
-      const liga = document.getElementById("liga").value;
-      const jogadores = jogadoresCache[liga] || new Set();
-
-      // Criar ou atualizar datalist
-      let datalist = document.getElementById("jogadores-lista");
-      if (!datalist) {
-        datalist = document.createElement("datalist");
-        datalist.id = "jogadores-lista";
-        document.body.appendChild(datalist);
-      }
-
-      // Limpar e preencher datalist
+      const jogadores = jogadoresCache[currentUser] || new Set();
+      const datalist = document.getElementById("jogadores-lista");
       datalist.innerHTML = "";
       Array.from(jogadores).sort().forEach(jogador => {
         const option = document.createElement("option");
         option.value = jogador;
         datalist.appendChild(option);
       });
-
-      // Conectar inputs ao datalist
-      const jogador1 = document.getElementById("jogador1");
-      const jogador2 = document.getElementById("jogador2");
-      jogador1.setAttribute("list", "jogadores-lista");
-      jogador2.setAttribute("list", "jogadores-lista");
     }
-
 
     // Event Listeners
     document.addEventListener("DOMContentLoaded", async () => {
@@ -1038,6 +1039,7 @@
       await carregarMercados();
       await carregarApostas();
       await buscarDadosAPI();
+      atualizarDatalistsJogadores();
 
       // Adicionar evento para atualizar jogadores quando mudar a liga
       document.getElementById("liga").addEventListener("change", () => {
