--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -14,7 +14,6 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    /* Melhorar a tipografia */
     body {
       background-color: #0a0a0d;
       color: #e0e0e0;
@@ -26,7 +25,6 @@
       min-height: 100vh;
       overflow-x: hidden;
       background-image: linear-gradient(to bottom, #0a0a0d, #101022);
-      font-family: 'Roboto', sans-serif;
     }
 
     .container {
@@ -57,7 +55,6 @@
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      font-family: 'Roboto Slab', serif;
     }
 
     /* Informações do usuário */
@@ -148,17 +145,6 @@
       outline: none;
       border-color: #a78bfa;
       box-shadow: 0 0 0 2px rgba(139, 92, 246, 0.2);
-    }
-
-    /* Adicionar estilos para o datalist */
-    input[list] {
-      background-color: #1f2937;
-      color: white;
-    }
-
-    /* Melhorar a aparência dos inputs */
-    input::placeholder {
-      color: #9ca3af;
     }
 
     /* Botões */
@@ -361,13 +347,6 @@
       content: "←";
       font-weight: bold;
     }
-
-    /* Adicionar transições suaves */
-    .tab-button,
-    .submit-button,
-    .add-market-button {
-      transition: all 0.3s ease;
-    }
   </style>
 </head>
 
@@ -428,15 +407,13 @@
 
           <div class="form-group">
             <label for="jogador1">Jogador 1</label>
-            <input type="text" id="jogador1" placeholder="Nome do Jogador 1" list="jogadores-lista" required>
+            <input type="text" id="jogador1" placeholder="Nome do Jogador 1" required>
           </div>
 
           <div class="form-group">
             <label for="jogador2">Jogador 2</label>
-            <input type="text" id="jogador2" placeholder="Nome do Jogador 2" list="jogadores-lista" required>
+            <input type="text" id="jogador2" placeholder="Nome do Jogador 2" required>
           </div>
-
-          <datalist id="jogadores-lista"></datalist>
 
           <div class="form-group">
             <label for="mercado">Mercado</label>
@@ -988,20 +965,41 @@
 
     // Função para buscar jogadores da API
     async function buscarDadosAPI() {
-      if (jogadoresCache[currentUser]) {
-        return jogadoresCache[currentUser];
-      }
-
       try {
         const response = await fetch('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1');
         const data = await response.json();
-        const jogadores = new Set();
-        data.forEach(evento => {
-          jogadores.add(extrairNomeJogador(evento.player1));
-          jogadores.add(extrairNomeJogador(evento.player2));
-        });
-        jogadoresCache[currentUser] = jogadores;
-        return jogadores;
+
+        if (data && data.data) {
+          const jogadoresPorLiga = {};
+
+          data.data.forEach(match => {
+            const ligaOriginal = match.leagueName;
+            const liga = mapearLiga(ligaOriginal);
+
+            // Inicializar o Set para a liga se não existir
+            if (!jogadoresPorLiga[liga]) {
+              jogadoresPorLiga[liga] = new Set();
+            }
+
+            // Adicionar jogadores apenas se a liga for mapeada corretamente
+            if (liga !== "Outro") {
+              if (match.home) {
+                const jogador = extrairNomeJogador(match.home);
+                jogadoresPorLiga[liga].add(jogador);
+              }
+              if (match.away) {
+                const jogador = extrairNomeJogador(match.away);
+                jogadoresPorLiga[liga].add(jogador);
+              }
+            }
+          });
+
+          // Atualizar cache
+          jogadoresCache = jogadoresPorLiga;
+
+          // Criar e atualizar datalists
+          atualizarDatalistsJogadores();
+        }
       } catch (error) {
         console.error("Erro ao buscar dados da API:", error);
       }
@@ -1009,16 +1007,33 @@
 
     // Função para atualizar datalists dos jogadores
     function atualizarDatalistsJogadores() {
-      const jogadores = jogadoresCache[currentUser] || new Set();
-      const datalist = document.getElementById("jogadores-lista");
+      const liga = document.getElementById("liga").value;
+      const jogadores = jogadoresCache[liga] || new Set();
+
+      // Criar ou atualizar datalist
+      let datalist = document.getElementById("jogadores-lista");
+      if (!datalist) {
+        datalist = document.createElement("datalist");
+        datalist.id = "jogadores-lista";
+        document.body.appendChild(datalist);
+      }
+
+      // Limpar e preencher datalist
       datalist.innerHTML = "";
       Array.from(jogadores).sort().forEach(jogador => {
         const option = document.createElement("option");
         option.value = jogador;
         datalist.appendChild(option);
       });
+
+      // Conectar inputs ao datalist
+      const jogador1 = document.getElementById("jogador1");
+      const jogador2 = document.getElementById("jogador2");
+      jogador1.setAttribute("list", "jogadores-lista");
+      jogador2.setAttribute("list", "jogadores-lista");
     }
 
+    
     // Event Listeners
     document.addEventListener("DOMContentLoaded", async () => {
       // Verificar se os dados do usuário existem no localStorage
@@ -1039,7 +1054,6 @@
       await carregarMercados();
       await carregarApostas();
       await buscarDadosAPI();
-      atualizarDatalistsJogadores();
 
       // Adicionar evento para atualizar jogadores quando mudar a liga
       document.getElementById("liga").addEventListener("change", () => {
