--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -629,11 +629,12 @@
 
           <div class="form-group">
             <label for="resultado">Resultado</label>
-            <select id="resultado">
+            <select id="resultado" required>
+              <option value="">Selecione o Resultado</option>
               <option value="green">Green</option>
               <option value="red">Red</option>
-              <option value="meio-green">Meio Green</option>
-              <option value="meio-red">Meio Red</option>
+              <option value="meio-green">½ Green</option>
+              <option value="meio-red">½ Red</option>
               <option value="reembolso">Reembolso</option>
             </select>
           </div>
