--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1200,7 +1200,24 @@
         console.error("Erro ao buscar dados da API:", error);
       }
     }
+    function calcularValorAposta(stake, odds, resultado) {
+      if (!stake || !odds) return 0;
 
+      switch (resultado) {
+        case "green":
+          return stake * (odds - 1);
+        case "red":
+          return -stake;
+        case "meio-green":
+          return (stake / 2) * (odds - 1);
+        case "meio-red":
+          return -stake / 2;
+        case "reembolso":
+          return 0;
+        default:
+          return 0;
+      }
+    }
     // Função para atualizar datalists dos jogadores
     function atualizarDatalistsJogadores() {
       const liga = document.getElementById("liga").value;
@@ -1319,6 +1336,8 @@
         }
       });
 
+
+
       // Cálculo dinâmico do resultado
       ["stake", "odds", "resultado"].forEach(id => {
         document.getElementById(id).addEventListener("input", () => {
@@ -1330,7 +1349,6 @@
           document.getElementById("resultado-final").textContent = formatarMoeda(valor);
         });
       });
-    });
 
   </script>
 </body>
